--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,50 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
+*{
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  -webkit-font-smoothing: antialiased;
 }
 
-a {
-  color: inherit;
+ul li{
+  list-style: none;
+}
+
+a{
   text-decoration: none;
+  color: inherit;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+textarea{
+  resize: none;
 }
+
+body{
+  background-color: var(--bg-100);
+}
+
+:root{
+    --primary-100:#A855F7;
+    --primary-200:#9333EA;
+    --primary-300:#C084FC;
+    --accent-100:#F472B6;
+    --text-100:#ffffff;
+    --text-200:#C4C4C6;
+    --bg-100:#0A0A0C;/*fondo general */
+    --bg-200:#212123;
+    --bg-300:#1D1D1F;/*solo cards */
+
+    --success:#4ADE80;
+    --error:#ff536d;
+    --warning:#FACC15;
+}
+
+
+.container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-inline: 1.5rem;
+  padding-block: 1rem;
+}
+
