--- a/src/app/HomePage/HomePage.css
+++ b/src/app/HomePage/HomePage.css
@@ -29,7 +29,7 @@
 .home_info {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
   gap: 1rem;
 
